<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.homework1.HomepageActivity" >

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/Welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="60sp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_welcome"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:text="@string/logout"
        android:textSize="16sp" />

    <Button
        android:id="@+id/saveprofile"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/saveprofile" />

    <TextView
        android:id="@+id/txt_parse_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_below="@+id/email"
        android:text="bdfbgdf"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/selectphoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewImage"
        android:layout_below="@+id/viewImage"
        android:text="@string/selectphoto" />

    <ImageView
        android:id="@+id/viewImage"
        android:layout_width="117dp"
        android:layout_height="116dp"
        android:layout_alignLeft="@+id/txt_welcome"
        android:layout_below="@+id/txt_welcome"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectphoto"
        android:layout_marginTop="24dp"
        android:text="@string/email" />

</RelativeLayout>